--- a/assets/css/google-plus.css
+++ b/assets/css/google-plus.css
@@ -1,6 +1,5 @@
 /* custom google plus style theme */
-@import url(http://fonts.googleapis.com/css?family=Roboto:400);
-
+ @import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
 html {
   direction: rtl;
 }
